examples/test/testpolicy889.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy889
  namespace: namespace422
spec:
  podSelector:
    matchLabels:
      key13: value45
      key40: value14
      key35: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value33
          key4: value23
          key1: value22
      podSelector:
        matchLabels:
          key11: value25
          key18: value29
